Login and Logout structure

--- a/04-angular/ang-intro/src/app/app.component.html
+++ b/04-angular/ang-intro/src/app/app.component.html
@@ -1,18 +1,33 @@
 <h1>Angular App</h1>
 
 <!-- links for the routes -->
-<div>
-    <span> [ <a [routerLink]="['/']">Home</a> ] </span>
-    <span> [ <a [routerLink]="['/greeter']">Greeter</a> ] </span>
-    <span> [ <a [routerLink]="['/calculator']">Calculator</a> ] </span>
-    <span> [ <a [routerLink]="['/calculator-2']">Calculator-2</a> ] </span>
-    <span> [ <a [routerLink]="['/salary-calculator']">Salary Calculator</a> ] </span>
-    <span> [ <a [routerLink]="['/dummy']">Non existant</a> ] </span>
+<div *ngIf="authService.IsLoggedIn">
+    <div>Welcome {{authService.CurrentUser.lastname}} {{authService.CurrentUser.firstname}}</div>
+    <div>Access Token : {{authService.AccessToken}}</div>
 </div>
+
+<!-- links for the routes -->
+<div>
+    <div *ngIf="!authService.IsLoggedIn; else logout">
+        <span> [ <a [routerLink]="['/login']">Login</a> ] </span>
+    </div>
+    <ng-template #logout>
+        <button (click)="onBtnLogoutClick()">Logout</button>
+    </ng-template>
+    <span> [ <a [routerLink]="['/']">Home</a> ] </span>
+    <div *ngIf="authService.IsLoggedIn">
+        <span> [ <a [routerLink]="['/greeter']">Greeter</a> ] </span>
+        <span> [ <a [routerLink]="['/calculator']">Calculator</a> ] </span>
+        <span> [ <a [routerLink]="['/calculator-2']">Calculator-2</a> ] </span>
+        <span> [ <a [routerLink]="['/salary-calculator']">Salary Calculator</a> ] </span>
+        <span> [ <a [routerLink]="['/dummy']">Non existant</a> ] </span>
+    </div>
+</div>
+
+<router-outlet></router-outlet>
 
 
 <!-- the components will be displayed in router-outlet based on the active route -->
-<router-outlet></router-outlet>
 
 <!-- <div class="shopping-cart">
     <div>
