--- a/04-angular/ang-intro/src/app/app.component.html
+++ b/04-angular/ang-intro/src/app/app.component.html
@@ -3,7 +3,7 @@
 <!-- links for the routes -->
 <div *ngIf="authService.IsLoggedIn">
     <div>Welcome {{authService.CurrentUser.lastname}} {{authService.CurrentUser.firstname}}</div>
-    <div>Access Token : {{authService.AccessToken}}</div>
+    <!-- <div>Access Token : {{authService.AccessToken}}</div> -->
 </div>
 
 <!-- links for the routes -->
